Added Copy To Clipboard (Feature)

--- a/calculators/src/index.css
+++ b/calculators/src/index.css
@@ -8,6 +8,14 @@ body {
   background-color: #dddddd;
 }
 
+.output{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  gap: 50px;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
