Changes with PR comments
Changed libraries in a project:

 Select from '@mui/material/Select'; for dropdown instead of import Dropdown from 'react-dropdown';

CurrencyExchangeIcon from '@mui/icons-material/CurrencyExchange'; instead of import { HiSwitchHorizontal } from 'react-icons/hi';

Changes made in a project do not change the overall page but only affect specific elements or components.

--- a/calculators/src/finance/currency_converter/CurrencyApp.css
+++ b/calculators/src/finance/currency_converter/CurrencyApp.css
@@ -54,6 +54,7 @@ input {
 }
 
 .convertButton {
+
     font-weight: bold;
     font-size: 20px;
     margin-top: 15px;
@@ -78,4 +79,8 @@ button,
 
 p {
     font-size: 30px;
+}
+
+.css-1yk1gt9-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root {
+    background-color: white;
 }
